# modelisation

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
notebooks/: 0.0-smoke-test-preprocessing.ipynb  0.1-smoke-test-evaluate-classification-model.ipynb  0.2-smoke-test-logistic-reg-model-training.ipynb  0.2-smoke-test-training-model-with-unbalanced-data.ipynb  10_build_design_matrix.ipynb  20_modelisation.ipynb
src/data/: modelisation_tuple.py
src/features/: balance.py  correlation.py  passthrough.py  variance.py
src/models/binary_classification/algos/: logistic_autotuning.py  xgboost_autotuning.py
src/models/binary_classification/evaluate/: metrics.py  pr_curve.py  scorers.py
src/models/classification/evaluate/: metric_evaluation.py  pr_curve.py
utils/: altair.py  logger.py  reportable.py
