[tool.poetry]
name = "modelisation"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ipykernel = "^6.25.1"
ipython = "^8.15.0"
pandas = "1.4.0"
scikit-learn = "^1.3.0"
category-encoders = "^2.6.2"
datapane = "^0.17.0"
pre-commit = "^3.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
