[tool.poetry]
name = "modelisation"
version = "0.1.0"
description = ""
authors = ["Coklacour <jeremie.alluard@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = ">=1.4.0,<2.0.0"
scikit-learn = "^1.4.0"
datapane = "^0.17.0"
optuna = "^3.5.0"
xgboost = "^2.0.3"
category-encoders = "^2.6.3"
pre-commit = "^3.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
